--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,14 @@ version: '3'
 
 services:
   db:
-    image: 'postgres:12-alpine'
+    image: 'postgres:12.4'
     volumes:
       - 'postgres:/var/lib/postgresql/data'
     ports:
       - '5432:5432'
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
-
-  redis:
-    image: 'redis:6-alpine'
-    command: redis-server
-    ports:
-      - '6379:6379'
-    volumes:
-      - 'redis:/data'
-
-  web:
-    depends_on:
-      - 'db'
-      - 'redis'
+  app:
     build: .
     command: bash start.sh
     ports:
@@ -29,7 +17,12 @@ services:
     environment:
       - DATABASE_HOST=db
       - DATABASE_USERNAME=postgres
+    volumes:
+      - .:/qcxchallenge
+      - gems:/gems
+    depends_on:
+      - db
 
 volumes:
-  redis:
   postgres:
+  gems:
